Add IPv6 support for determining FQDN during ADS join.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11282

Signed-off-by: David Holder <david.holder@erion.co.uk>
Reviewed-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Ralph Böhme <rb@sernet.de>

Autobuild-User(master): Jeremy Allison <jra@samba.org>
Autobuild-Date(master): Tue May 12 23:35:32 CEST 2015 on sn-devel-104

(cherry picked from commit 6e08bfb4441022a00d0c29205e835a4858a3a57f)